# multiphase_LBM

./: AUTHORS.md  CMakeLists.txt  README.md  example.txt  index.md  positions_767balls_2.5-7.5radius_0.5porosity_x2res
example/: input_inject.txt
include/: global_var.cuh  iteration_device.cuh  iteration_host.h  iteration_kernel.cuh  lbm_model.cuh  multiphase_lbm.h
src/: iteration_host.cu  main.cc  multiphase_lbm.cu
